--- a/app/src/main/res/layout/fragment_hazards.xml
+++ b/app/src/main/res/layout/fragment_hazards.xml
@@ -101,6 +101,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
+            android:clickable="true"
+            android:focusable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/level_slider_label"
